syntax =  "proto3";

package quiz.service.frontend.answer.v1;

import "base/frontend/v1/answer.proto";

option go_package = "doit-platform/apis/gen/quiz-service/service/frontend/answer/v1;answersvc";

service AnswerService {
  rpc CreateAnswer(CreateAnswerRequest) returns (CreateAnswerResponse);
  rpc CreateAnswers(CreateAnswerRequests) returns (CreateAnswerResponses);
  rpc GetAnswerById(GetAnswerRequest) returns (GetAnswerResponse);
  rpc GetAnswersByQuestionId(GetAnswerRequest) returns (GetAnswerResponses);
  rpc UpdateAnswer(UpdateAnswerRequest) returns (UpdateAnswerResponse);
  rpc DeleteAnswer(DeleteAnswerRequest) returns (DeleteAnswerResponse);
}

message CreateAnswerRequest {
  string text = 1;
  bool is_correct = 2;
  string question_id = 3;
}

message CreateAnswerResponse {
  string id = 1;
}

message CreateAnswerRequests {
  repeated CreateAnswerRequest answers = 1;
}

message CreateAnswerResponses {
  repeated CreateAnswerResponse answers = 1;
}

message GetAnswerRequest {
  string id = 1;
}

message GetAnswerResponse {
  string id = 1;
  string text = 2;
  string question_id = 3;
}

message GetAnswerResponses {
  repeated GetAnswerResponse answers = 1;
}

message UpdateAnswerRequest {
  base.frontend.v1.Answer answer = 1;
}

message UpdateAnswerResponse {
  string updated_id = 1;
}

message DeleteAnswerRequest {
  string id = 1;
}

message DeleteAnswerResponse {
  string deleted_id = 1;
}
